# Gcap1-fin

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  gcap1.glade  gcap1.gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  capteur.c  capteur.h  fonctions.c  fonctions.h  gcap1  humidite.txt  interface.c.bak  interface.h.bak  liste_des_capteurs.txt  main.c  temperature.txt
src/.deps/: callbacks.Po
